multithread storage systems (#152)
* back out `throws` in tests, fix test issues

* test cleanup

* I was trying to think of a way to encapsulate the context copying step. I didn't test it, but I think this will work.

* revert change

* refactor out, rename, add javadoc